--- a/overlay/packages/apps/Camera/res/values/config.xml
+++ b/overlay/packages/apps/Camera/res/values/config.xml
@@ -20,11 +20,30 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
-    <!-- Enable HTCCamMode -->
+    <!-- Allows setting video size before recording starts -->
+    <bool name="needsEarlyVideoSize">true</bool>
+    <!-- Samsung Camcorder Mode -->
+    <bool name="needsSamsungCamMode">false</bool>
+    <!-- HTC Camcorder Mode -->
     <bool name="needsHTCCamMode">true</bool>
+    <!-- Samsung Camera Settings -->
+    <bool name="hasSamsungCamSettings">false</bool>
+    <!-- The camera removes the focus modes by default when touch-to-focus
+         exists. Use this option to change that behavior -->
+    <bool name="wantsFocusModes">false</bool>
+    <!-- Always use preferred preview size path for effects recording instead of the display resolution -->
+    <bool name="usePreferredPreviewSizeForEffects">false</bool>
+    <!-- Ignore preferred preview size and use best value from supported preview sizes   
+         Setting both this and the above option true will always use values from preview sizes for both -->
+    <bool name="ignorePreferredPreviewSizeForVideo">false</bool>
+    <!-- Restart the preview on picture taken -->
+    <bool name="restartPreviewOnPictureTaken">false</bool>
     <!-- Disable face detection on the front camera -->
     <bool name="noFaceDetectOnFrontCamera">true</bool>
-    <!-- Disable face detection on the front camera -->
+    <!-- Disable face detection on the rear camera -->
     <bool name="noFaceDetectOnRearCamera">true</bool>
+    <!-- Use ZSL mode -->
+    <bool name="enableZSL">true</bool>
+    <!-- Reset rotation parameter in video camera -->
+    <bool name="resetVideoRotationParameter">true</bool>
 </resources>
-
